--- a/requirements.txt
+++ b/requirements.txt
@@ -29,9 +29,9 @@ oauthlib==3.1.1
 packaging==21.3
 pathspec==0.9.0
 phonenumbers==8.12.41
-Pillow==9.0.0
+Pillow==9.3.0
 platformdirs==2.5.1
-psycopg2==2.9.3
+psycopg2-binary==2.9.3
 pycparser==2.21
 PyJWT==2.3.0
 pyparsing==3.0.7
